--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -13,25 +13,125 @@
   margin: 0 auto;
 }
 
+// cities
 .weather-widget {
   .city-wrapper {
     display: flex;
+    display: -webkit-flex;
     padding: 2rem;
-    .city {
+    .city-btn {
       margin: 0 auto;
       text-transform: uppercase;
-
-      color: #84878C;
-      font-size: 20px;
-      letter-spacing: 2px;
+      color: #494A50;
       cursor: pointer;
+      transition: all 0.2s ease-in-out;
+
+      font-size: 25px;
+      letter-spacing: 1px;
+      font-weight: 300;
+
       &.active {
-        color: aqua;
+        color: #5FB0E8;
+        font-weight: bold;
       }
     }
   }
 }
 
-.container {
-  
+// forecast
+.weather-widget {
+  .forecast {
+    border: 5px solid #ffffff;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+  }
+}
+
+// current forecast
+.weather-widget {
+  .forecast {
+    .current {
+      border-bottom: 5px solid #ffffff;
+      p {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        text-align: center;
+      
+        font-size: 27px;
+        letter-spacing: 1px;
+        font-weight: 300;
+      }
+      .info {
+        img {
+          width: 135px;
+          height: 130px;
+        }
+        padding-bottom: 50px;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        gap: 10px;
+        .degree-celcius {
+          display: flex;
+          display: -webkit-flex;
+          flex-direction: column;
+          .celcius {
+            font-weight: bold;
+            font-size: 50px;
+          }
+          .code-name {
+            font-size: 27px;
+            letter-spacing: 1px;
+            font-weight: 300;
+          }
+        }
+      }
+    }
+  }
+}
+
+// four-day forecast
+.weather-widget {
+  .forecast {
+    .four-day {
+      width: 100%;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-flow: row wrap;
+      flex-flow: row wrap;
+
+      .col {
+        width: 100%;
+        text-align: center;
+        p {
+          text-align: center;
+          padding: 25px 0;
+          
+          font-size: 20px;
+          letter-spacing: 1px;
+          font-weight: 300;
+        }
+        img {
+          width: 60px;
+          height: 60px;
+        }
+        .celcius {
+          padding: 25px 0;
+          
+          font-size: 27px;
+          letter-spacing: 1px;
+          font-weight: bold;
+        }
+      }
+
+      @media (min-width: 800px) {
+        .col {
+          width: 24%;
+          &:not(:last-child) {
+            border-right: 5px solid #ffffff;
+          }
+        }
+      }
+    }
+  }
 }
