--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -11,6 +11,9 @@
 .weather-widget {
   max-width: 800px;
   margin: 0 auto;
+  @media (max-width: 799px) {
+    padding: 0 15px 15px;
+  }
 }
 
 // cities
@@ -19,20 +22,60 @@
     display: flex;
     display: -webkit-flex;
     padding: 2rem;
+
     .city-btn {
       margin: 0 auto;
       text-transform: uppercase;
       color: #494A50;
       cursor: pointer;
-      transition: all 0.2s ease-in-out;
 
-      font-size: 25px;
+      font-size: 2rem;
       letter-spacing: 1px;
       font-weight: 300;
+
+      will-change: transform;
+      transition: transform 250ms;
+
+      &:hover {
+        transition: transform 125ms;
+        transform: translateY(-5px);
+      }
 
       &.active {
         color: #5FB0E8;
         font-weight: bold;
+      }
+    }
+
+    
+
+  }
+}
+
+// mobile menu
+.weather-widget {
+  .mobile-menu {
+    display: none;
+    text-align: right;
+    padding: 15px 0;
+    svg {
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  @media (max-width: 799px) {
+    .mobile-menu {
+      display: block;
+    }
+    .city-wrapper {
+      display: none;
+      &.active {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 0;
+        button {
+          padding: 0.7rem;
+        }
       }
     }
   }
@@ -41,6 +84,7 @@
 // forecast
 .weather-widget {
   .forecast {
+    background-color: #EEF6FB;
     border: 5px solid #ffffff;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
@@ -52,40 +96,46 @@
   .forecast {
     .current {
       border-bottom: 5px solid #ffffff;
+
       p {
-        padding-top: 50px;
-        padding-bottom: 50px;
+        padding: 3.1rem 0;
         text-align: center;
       
-        font-size: 27px;
+        font-size: 1.8rem;
         letter-spacing: 1px;
         font-weight: 300;
       }
+
       .info {
         img {
           width: 135px;
           height: 130px;
         }
-        padding-bottom: 50px;
+        padding-bottom: 3.1rem;
         display: flex;
         display: -webkit-flex;
         justify-content: center;
-        gap: 10px;
+        gap: 30px;
+
         .degree-celcius {
           display: flex;
           display: -webkit-flex;
           flex-direction: column;
+
           .celcius {
             font-weight: bold;
-            font-size: 50px;
+            font-size: 4rem;
           }
+          
           .code-name {
-            font-size: 27px;
+            font-size: 1.8rem;
             letter-spacing: 1px;
             font-weight: 300;
           }
+
         }
       }
+
     }
   }
 }
@@ -93,6 +143,7 @@
 // four-day forecast
 .weather-widget {
   .forecast {
+
     .four-day {
       width: 100%;
       display: -webkit-flex;
@@ -103,25 +154,29 @@
       .col {
         width: 100%;
         text-align: center;
+
         p {
           text-align: center;
-          padding: 25px 0;
+          padding: 1.6rem 0;
           
-          font-size: 20px;
+          font-size: 1.3rem;
           letter-spacing: 1px;
           font-weight: 300;
         }
+
         img {
           width: 60px;
           height: 60px;
         }
+
         .celcius {
-          padding: 25px 0;
+          padding: 1.6rem 0;
           
-          font-size: 27px;
+          font-size: 1.6rem;
           letter-spacing: 1px;
           font-weight: bold;
         }
+
       }
 
       @media (min-width: 800px) {
@@ -129,6 +184,13 @@
           width: 24%;
           &:not(:last-child) {
             border-right: 5px solid #ffffff;
+          }
+        }
+      }
+      @media (max-width: 799px) {
+        .col {
+          &:not(:last-child) {
+            border-bottom: 5px solid #ffffff;
           }
         }
       }
