--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -136,6 +136,18 @@
             bottom: 20px;
           }
 
+          @media (min-width: 800px) {
+            .code-name {
+              min-width: 200px;
+            }
+          }
+          @media (max-width: 799px) {
+            .code-name {
+              min-width: unset;
+              bottom: -15px;
+            }
+          }
+
         }
       }
 
